# tocify

./: .buildinfo  .gitignore  LICENSE  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/workflows/: documentation.yml
docs/source/: conf.py  index.rst
paginator/: main.py  toc.j2
tests/: test_tocify.py
tocify/: main.py
